<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Auto Ride Driver</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_driver" translatable="false">Driver</string>
    <string name="google_direction_api_key" translatable="false">AIzaSyDPozXePdt2JYOjbUatm2FG-UEptQ_VZxs</string>
    <string name="what_s_your_email_address">What\'s your email Address?</string>
    <string name="what_s_your_phone">What\'s your phone number?</string>
    <string name="hint_email">Enter your email (Optional)</string>
    <string name="hint_enter_your_number">Enter phone number</string>
    <string name="whats_s_your_name">What\'s your name?</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_new_your_password">Enter your new password</string>
    <string name="enter_promo_code">Enter promotion code</string>
    <string name="what_s_your_password">What\'s your password?</string>
    <string name="reg_password">Make your account password</string>
    <string name="reset_your_account_password">Make your new password</string>
    <string name="promo_code">Promotion Code</string>
    <string name="label_enter_the_verification_code">Enter the verification code sent to you</string>
    <string name="label_just_a_ride" translatable="false">Just A Ride</string>
    <string name="label_more_than" translatable="false">More Than</string>
    <string name="label_not_available" translatable="false">N/A</string>
    <string name="label_select" translatable="false">Select :</string>
    <string name="login">Login</string>
    <string name="loginwelcome">LOGIN</string>
    <string name="max_size" translatable="false">Max Size</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="profile_edit">Profile</string>
    <string name="name_edit">Name</string>
    <string name="email">Email</string>
    <string name="email_edit">Email</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_edit">Mobile</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="skip" translatable="false">Skip</string>
    <string name="resend_code_in" translatable="false">Re send code in</string>
    <string name="enter_the_4_digit_code_sent_to_you" translatable="false">Enter the 4-digit code sent to you</string>
    <string name="with_you_when_you_want_to_keep_n_moving_forward" translatable="false">With you When You Want To Keep</string>
    <string name="at" translatable="false">at</string>
    <string name="places" translatable="false">Places</string>
    <string name="add_home" translatable="false">Add Home</string>
    <string name="add_work" translatable="false">Add Work</string>
    <string name="enter_the_promo_code" translatable="false">Enter the Promo Code</string>
    <string name="add_code" translatable="false">ADD CODE</string>
    <string name="choose_an_action" translatable="false">Choose an action</string>
    <string name="camera" translatable="false">Camera</string>
    <string name="gallery" translatable="false">Gallery</string>
    <string name="_4_people" translatable="false">4 People</string>
    <string name="_60" translatable="false">र 60</string>
    <string name="amount">Amount</string>
    <string name="amount_trip_list">Amount</string>
    <string name="base_fare">Base Fare</string>
    <string name="base_fare_receipt">Base Fare</string>
    <string name="base_rate">Base rate</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="btn_ok">OK</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Canceled</string>
    <string name="car_quality" translatable="false">Car Quality</string>
    <string name="car_quality_bad_remark" translatable="false">Car Quality</string>
    <string name="carname" translatable="false">CarName</string>
    <string name="cash" translatable="false">Cash</string>
    <string name="cash_help_page" translatable="false">Cash:</string>
    <string name="cash_receipt" translatable="false">Cash</string>
    <string name="cash_trip_details" translatable="false">Cash</string>
    <string name="cash_trip_list" translatable="false">Cash</string>
    <string name="cleanliness" translatable="false">Cleanliness</string>
    <string name="cleanliness_bad_remark" translatable="false">Cleanliness</string>
    <string name="comfort" translatable="false">Comfort</string>
    <string name="comfort_bad_remark" translatable="false">Comfort</string>
    <string name="Confirmation" translatable="false">confirmation</string>
    <string name="contact" translatable="false">Contact</string>
    <string name="date" translatable="false">Date</string>
    <string name="destination_required" translatable="false">Destination Required</string>
    <string name="details" translatable="false">Details</string>
    <string name="done" translatable="false">Done</string>
    <string name="drawer_close" translatable="false">1</string>
    <string name="drawer_open" translatable="false">1</string>
    <string name="driver_name" translatable="false">Driver name</string>
    <string name="driving" translatable="false">Driving</string>
    <string name="driving_bad_remark" translatable="false">Driving</string>
    <string name="edit_account" translatable="false">Edit Account</string>
    <string name="edit_account_toolbar" translatable="false">Edit Account</string>
    <string name="enter_destination" translatable="false">Enter Destination</string>
    <string name="eta" translatable="false">ETA</string>
    <string name="excellent" translatable="false">Excellent</string>
    <string name="feedback_bad_car_quality" translatable="false">Car Quality</string>
    <string name="feedback_bad_cleanliness" translatable="false">Cleanliness</string>
    <string name="feedback_bad_comfort" translatable="false">Comfort</string>
    <string name="feedback_bad_driving" translatable="false">Driving</string>
    <string name="feedback_bad_other" translatable="false">Other</string>
    <string name="feedback_bad_service" translatable="false">Service</string>
    <string name="feedback_good_car_quality" translatable="false">Car Quality</string>
    <string name="feedback_good_cleanliness" translatable="false">Cleanliness</string>
    <string name="feedback_good_comfort" translatable="false">Comfort</string>
    <string name="feedback_good_driving" translatable="false">Driving</string>
    <string name="feedback_good_other" translatable="false">Other</string>
    <string name="feedback_good_service" translatable="false">Service</string>
    <string name="free_rides" translatable="false">Free Rides</string>
    <string name="get_fare_estimate" translatable="false">Get Fare Estimate</string>
    <string name="give_friends_free_ride_credit_to_try_la_taxi_you_ll_get_50_off_each_off_your_next_2_rides_when_they_start_riding" translatable="false">Give friends free ride credit to try la taxi. You\'ll get र50 off each off your next 2 rides when they start riding.</string>
    <string name="home" translatable="false">Add Home</string>
    <string name="i_had_an_issue_with_reciept_or_payment" translatable="false">I had an issue with reciept or payment</string>
    <string name="i_lost_an_item" translatable="false">I Lost an item</string>
    <string name="i_was_incorrectly_charged_cancellation_fee" translatable="false">I was incorrectly charged cancellation fee</string>
    <string name="i_would_like_a_refund" translatable="false">I would like a refund</string>
    <string name="invite_friends" translatable="false">Invite Friends</string>
    <string name="kilometer_rate" translatable="false">Kilometer rate</string>
    <string name="kilometers" translatable="false">Kilometers</string>
    <string name="kilometers_receipt" translatable="false">Kilometers</string>
    <string name="la_go" translatable="false">la GO</string>
    <string name="la_l" translatable="false">la xl</string>
    <string name="la_taxi" translatable="false">la taxi</string>
    <string name="la_taxi_login" translatable="false">la taxi</string>
    <string name="la_xxl" translatable="false">la xxl</string>
    <string name="min_fare" translatable="false">Min Fare</string>
    <string name="minute_rate" translatable="false">Minute rate</string>
    <string name="minutes" translatable="false">Minutes</string>
    <string name="minutes_receipt" translatable="false">Minutes</string>
    <string name="my_driver_was_unprofessional" translatable="false">My driver was Unprofessional</string>
    <string name="my_vehicle_wasn_t_what_i_expected" translatable="false">My vehicle wasn\'t what i expected</string>
    <string name="name" translatable="false">Name</string>
    <string name="name_example_com" translatable="false">name@example.com</string>
    <string name="name_example_com_drawer" translatable="false">name@example.com</string>
    <string name="name_help_page" translatable="false">Name</string>
    <string name="name_settings" translatable="false">Name</string>
    <string name="no_network_available" translatable="false">No Internet Connection "\n" "\n" Please check your internet connection and Try again !</string>
    <string name="location_disable" translatable="false">GPS connection is disable "\n" "\n" Please enable your GPS connection !</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_document">Documents</string>
    <string name="btn_profile">Profile</string>
    <string name="btn_trip_history">Your Trips</string>
    <string name="btn_logout">Log Out</string>
    <string name="driver_trip">Trip</string>
    <string name="driver_rating">Rating</string>
    <string name="Year">Years</string>
    <string name="tv_vehicle_info_msg">Please provide all vehicle information</string>
    <string name="tv_vehicle_info_btn_msg">Make sure your Vehicle Information is up to date</string>
    <string name="tv_vehicle_type">Vehicle Type</string>
    <string name="tv_vehicle_brand">Vehicle Brand</string>
    <string name="tv_vehicle_model">Vehicle Model</string>
    <string name="tv_vehicle_no">Vehicle Registration Number</string>
    <string name="et_vehicle_model_hint">Enter vehicle model</string>
    <string name="et_vehicle_brand_hint">Enter vehicle brand</string>
    <string name="et_vehicle_no_hint">Enter vehicle registration number</string>
    <string name="btn_driving_license">Driving License</string>
    <string name="btn_vehicle_info">Vehicle Information</string>
    <string name="btn_retake">Retake</string>
    <string name="btn_take_photo">Take Photo</string>
    <string name="tv_choose_msg">Please upload documents by choosing a picture</string>
    <string name="tv_sure_msg">Make sure we can easily read all the documents</string>
    <string name="btn_reference">My Partner</string>
    <string name="tv_on_test">On Test</string>
    <string name="txt_req24">CANCEL TRIP</string>
    <string name="txt_map1">Map None</string>
    <string name="txt_map2">Normal Map</string>
    <string name="txt_map3">Satellite Map</string>
    <string name="txt_map4">Hybrid Map</string>
    <string name="txt_map5">Terrain Map</string>
    <string name="txt_req25">The ride was not charged</string>
    <string name="txt_req26">Rider could not be found</string>
    <string name="txt_req27">Ride requested cancel</string>
    <string name="btn_speed_meter">Speed Meter</string>
</resources>