<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_switch_on_off"
        android:title=""
        app:actionLayout="@layout/layout_online_offline_switch"
        app:showAsAction="always" />

    <item
        android:id="@+id/map_none"
        android:orderInCategory="100"
        android:title="@string/txt_map1"
        app:showAsAction="never" />

    <item
        android:id="@+id/map_normal"
        android:orderInCategory="100"
        android:title="@string/txt_map2"
        app:showAsAction="never" />

    <item
        android:id="@+id/map_satellite"
        android:orderInCategory="100"
        android:title="@string/txt_map3"
        app:showAsAction="never" />

    <item
        android:id="@+id/map_hybrid"
        android:orderInCategory="100"
        android:title="@string/txt_map4"
        app:showAsAction="never" />

    <item
        android:id="@+id/map_terrain"
        android:orderInCategory="100"
        android:title="@string/txt_map5"
        app:showAsAction="never" />
</menu>