<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_vehicle_info_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingStart="@dimen/_25sdp"
            android:text="@string/btn_vehicle_info"
            android:textSize="@dimen/doc_btn_text_size1" />

        <TextView
            android:id="@+id/tv_vehicle_info_msg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:padding="@dimen/_5sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingStart="@dimen/_25sdp"
            android:text="@string/tv_vehicle_info_msg"
            android:textSize="@dimen/doc_btn_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingStart="@dimen/_25sdp"
            android:text="@string/tv_vehicle_type"
            android:textColor="@color/login_edit_text"
            android:textSize="@dimen/tv_text_size" />

        <Spinner
            android:id="@+id/spinner_vehicle_type"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_15sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingStart="@dimen/_25sdp"
            android:text="@string/tv_vehicle_brand"
            android:textColor="@color/login_edit_text"
            android:textSize="@dimen/tv_text_size" />

        <EditText
            android:id="@+id/et_vehicle_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/et_vehicle_brand_hint"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingStart="@dimen/_25sdp"
            android:text="@string/tv_vehicle_model"
            android:textColor="@color/login_edit_text"
            android:textSize="@dimen/tv_text_size" />

        <EditText
            android:id="@+id/et_vehicle_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/et_vehicle_model_hint"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingStart="@dimen/_25sdp"
            android:text="@string/tv_vehicle_no"
            android:textColor="@color/login_edit_text"
            android:textSize="@dimen/tv_text_size" />

        <EditText
            android:id="@+id/et_vehicle_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/et_vehicle_no_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_vehicle_sure_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingStart="@dimen/_25sdp"
            android:text="@string/tv_vehicle_info_btn_msg"
            android:textAlignment="center"
            android:textSize="@dimen/doc_btn_text_size" />

        <Button
            android:id="@+id/btn_set_vehicle_info"
            style="?borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@color/color_doc3"
            android:text="@string/btn_save"
            android:textColor="@color/white"
            android:textSize="@dimen/doc_btn_text_size" />
    </LinearLayout>
</ScrollView>