<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_10sdp"
        android:paddingStart="@dimen/_15sdp"
        android:text="@string/txt_req24"
        android:textColor="@color/gray_light_1"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cause1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/vect8"
            android:drawablePadding="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:paddingStart="@dimen/_15sdp"
            android:text="@string/txt_req25"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_cause2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/vect8"
            android:drawablePadding="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:paddingStart="@dimen/_15sdp"
            android:text="@string/txt_req26"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_cause3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/vect8"
            android:drawablePadding="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:paddingStart="@dimen/_15sdp"
            android:text="@string/txt_req27"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_37sdp"
            android:background="#E6E4E6" />
    </LinearLayout>
</LinearLayout>