<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_licence_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_5sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingStart="@dimen/_25sdp"
        android:text="@string/btn_driving_license"
        android:textSize="25sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_licence_msg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_5sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingStart="@dimen/_25sdp"
        android:text="@string/tv_choose_msg"
        android:textSize="18sp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/iv_driver_licence_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_weight="3" />

    <LinearLayout
        android:id="@+id/ll_driver_licence_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:padding="@dimen/_5sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingStart="@dimen/_25sdp"
            android:text="@string/tv_sure_msg"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                style="?borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:onClick="onLicenceRetake"
                android:text="@string/btn_retake"
                android:textColor="@color/black_666"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_upload_licence_photo"
                style="?borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_weight="1"
                android:background="@color/black"
                android:text="@string/btn_save"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_licence_take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/color_doc3" />


        <Button
            style="?borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:background="@color/color_doc3"
            android:drawableLeft="@drawable/ic_photo_camera_black_24dp"
            android:onClick="onDrivingLicenceTakePhoto"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/btn_take_photo"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>